- Fix overflow-y on modal image

--- a/src/Components/Other/ModalImage/ModalImage.css
+++ b/src/Components/Other/ModalImage/ModalImage.css
@@ -12,7 +12,6 @@
     z-index: 9999;
     opacity: 1;
     overflow-x: hidden;
-    overflow-y: hidden;
     animation: show .5s ease;
 }
 
